# social-core

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-azuread.txt  requirements-base.txt  requirements-dev.txt  requirements-id4me.txt  requirements-openidconnect.txt  requirements-python2.txt  requirements-python3.txt  requirements-saml.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json  stale.yml
.github/workflows/: flake8.yml  pre-commit-shared.yml  pre-commit.yml  publish.yml  pylint.yml  release-shared.yml  release.yml  ruff.yml  scorecard.yml  test.yml  ty.yml
files/release/: Dockerfile  entrypoint.sh
files/tests/: entrypoint.sh
social_core/: __init__.py  actions.py  exceptions.py  registry.py  storage.py  store.py  strategy.py  utils.py
social_core/backends/: amazon.py  angel.py  aol.py  apple.py  appsfuel.py  arcgis.py  asana.py  atlassian.py  auth0.py  auth0_openidconnect.py  azuread.py  azuread_b2c.py  azuread_oid  azuread_oid.py  azuread_tenant.py  base.py  battlenet.py  beats.py  behance.py  belgiumeid.py  bitbucket.py  bitbucket_datacenter.py  box.py  bungie.py  cas.py  casdoor.py  changetip.py  chatwork.py  checkin.py  cilogon.py  classlink.py  clef.py  clever.py  coding.py  cognito.py  coinbase.py  coursera.py  dailymotion.py  deezer.py  digitalocean.py  (+170 more)
social_core/pipeline/: __init__.py  debug.py  disconnect.py  mail.py  partial.py  social_auth.py  user.py  utils.py
social_core/tests/: models.py  pipeline.py  requirements-base.txt  requirements-pypy.txt  requirements-python2.txt  requirements-python3.txt  requirements.txt  strategy.py  test_exceptions.py  test_expiration_timedelta.py  test_mail.py  test_partial.py  test_pipeline.py  test_registry.py  test_storage.py  test_strategy_none_storage.py  test_utils.py
social_core/tests/actions/: actions.py  test_associate.py  test_disconnect.py  test_login.py
social_core/tests/backends/: base.py  legacy.py  oauth.py  open_id.py  open_id_connect.py  test_amazon.py  test_angel.py  test_aol.py  test_apple.py  test_appsfuel.py  test_arcgis.py  test_asana.py  test_atlassian.py  test_auth0.py  test_auth0_openidconnect.py  test_azuread.py  test_azuread_b2c.py  test_base.py  test_behance.py  test_bitbucket.py  test_bitbucket_datacenter.py  test_box.py  test_broken.py  test_cas.py  test_casdoor.py  test_chatwork.py  test_checkin.py  test_cilogon.py  test_clef.py  test_clever.py  test_cognito.py  test_coinbase.py  test_coursera.py  test_dailymotion.py  test_deezer.py  test_digitalocean.py  test_discogs.py  test_discourse.py  test_disqus.py  test_dribbble.py  (+114 more)
social_core/tests/backends/data/: saml_config.json  saml_response.txt  saml_response_legacy.txt  saml_response_no_idp_name.txt  saml_response_no_next_url.txt
